--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,7 +15,8 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
