--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.1",
+    "@openzeppelin/contracts": "^4.8.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
+    "truffle-contract": "^4.0.31",
     "web-vitals": "^2.1.4",
     "web3": "^1.9.0"
   },
